# rss-feed-manager

./: .github_username  .gitignore  .replit  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-char-1734625157563.txt  Pasted-InvalidRequestError-sqlalchemy-exc-InvalidRequestError-Entity-namespace-for-Mapper-RSSFeed-rss-fee-1734624449620.txt  Pasted-Overview-The-Venture-Weekly-RSS-Downloader-is-a-comprehensive-tool-designed-to-manage-and-monitor-R-1734613747789.txt  README.md  app.py  auth.py  feed_manager.py  feed_updater.py  gunicorn.conf.py  install_service.sh  main.py  models.py  pyproject.toml  replit.nix  requirements.txt  reset_admin_password.sh  scheduler.py  wsgi.py
attached_assets/: Pasted-025-01-14-12-50-11-root-INFO-Scanning-feed-https-www-gruenderszene-de-feed-2025-01-14-12-5-1736855514114.txt  Pasted-Jan-14-09-20-47-venture-weekly-downloader-dev-systemd-1-Started-RSS-Feed-Manager-Service-Jan-14--1736842929746.txt
instance/: rss_feeds.db  rss_feeds.db-journal
migrations/versions/: 31ed322d07ad_initial_migration.py  67ca2c191395_add_scanprogress_model_for_tracking_.py
static/css/: style.css
static/js/: dashboard.js
templates/: articles.html  base.html  dashboard.html  login.html
