[project]
name = "repl-nix-ventureweeklytracker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "feedparser>=6.0.11",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "sqlalchemy>=2.0.36",
    "werkzeug>=3.1.3",
    "trafilatura>=2.0.0",
    "psycopg2-binary",
    "email-validator",
    "flask-migrate>=4.0.7",
]
